# bursts

./: .gitignore  LICENSE  README.md  bursts.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Algo/: Lib.hs
test/: Spec.hs
