name:                bursts
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/yasukun/bursts
license:             MIT
license-file:        LICENSE
author:              yasukun
maintainer:          https://twitter.com/sukezo
copyright:           2015 yasukun
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Algo.Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable bursts-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , bursts
                     , cmdargs
  default-language:    Haskell2010

test-suite bursts-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bursts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yasukun/bursts
